--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,21 @@
     margin-left: 20px;
 }
 
+.cityCard {
+    justify-content: center;
+    align-items: center;
+    border: .0px solid black;
+    box-shadow: 2px 2px 3px 4px #ccc;
+    border-radius: 20px;
+    padding: 2px;
+    background: #334768;
+    font-size: 18px;
+    width: 300px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 400px;
+}
+
 .square {     
     background-color: Transparent;
     background-repeat:no-repeat;
