--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,58 @@ hr {
       margin-bottom: 3px;
       margin-top: 3px;
 }
+
+.bor1 {
+     justify-content: center;
+    align-items: center;
+
+  align-items: right;
+  color: grey;
+  background-color: black;
+    border: none;
+    border-width: 0.2;
+    
+    cursor:pointer;
+    overflow: hidden;
+
+}
+
+.bor2 {
+font-size: 15px;    
+width: 100px;
+float:left;
+ height:20px; 
+background:yellow; 
+margin:10;
+
+  
+  color: grey;
+  background-color: black;
+    border: inset;
+    border-width: 0.01;
+}
+
+.bor3 {
+font-size: 15px;    
+width: 100px;
+float:left;
+ height:20px; 
+ 
+margin:10;
+
+  
+  color: black;
+  background-color: #333333;
+    border: inset;
+    border-width: 0.01;
+}    
+
+
+
+
+
+
+
+    
+
+
